--- a/public/index.html
+++ b/public/index.html
@@ -71,8 +71,10 @@
     </div>
 
     <!--padding for "x" and "y" axis
-    h-screen - 100% vh-->
-    <main class="px-16 py-6 bg-gray-100 md:col-span-4 h-screen">
+    h-screen - 100% vh
+    dark-mode will be enabled, if somewhere up in the tree, "dark" class will be present
+    -->
+    <main class="px-16 py-6 bg-gray-100 md:col-span-4 h-screen dark:bg-slate-500">
         <!--"primary" - custom text color from config-->
         <div class="text-primary flex justify-center md:justify-end">
             <!--md:border-2 - border will be applied only to md screens and wider-->
